completed the edit/post thru PRG pattern

--- a/aaron-favorite-music-domain/aaron-favorite-music-domain.csproj
+++ b/aaron-favorite-music-domain/aaron-favorite-music-domain.csproj
@@ -5,4 +5,8 @@
     <RootNamespace>aaron_favorite_music_domain</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.DataAnnotations" Version="2.1.0" />
+  </ItemGroup>
+
 </Project>
