added sql server support with EF core for sql server v2.1

--- a/aaron-favorite-music/appsettings.json
+++ b/aaron-favorite-music/appsettings.json
@@ -5,5 +5,9 @@
     }
   },
   "AllowedHosts": "*",
-  "Message": "Hello from App settings!"
+  "Message": "Hello from App settings!",
+  "ConnectionStrings" : {
+    "FavoriteMusic": "Server=localhost;Database=FavoriteMusic;User Id=sa;Password=password1!",
+    "Other": "DataSource=(localdb)\\MSSQLLocalDb; Initial Catelog=FavoriteMusicDb;Integrated Security=True"
+  }
 }
