--- a/aaron-favorite-music-data/aaron-favorite-music-data.csproj
+++ b/aaron-favorite-music-data/aaron-favorite-music-data.csproj
@@ -1,12 +1,18 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <!-- <TargetFramework>netstandard2.0</TargetFramework> -->
+      <TargetFramework>netcoreapp2.1</TargetFramework>    
     <RootNamespace>aaron_favorite_music_data</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
     <ProjectReference Include="../aaron-favorite-music-domain/aaron-favorite-music-domain.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="2.1.1" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="2.1.1" />
   </ItemGroup>
 
 </Project>
