--- a/aaron-favorite-music/aaron-favorite-music.csproj
+++ b/aaron-favorite-music/aaron-favorite-music.csproj
@@ -5,11 +5,13 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.App" />
+    <PackageReference Include="Microsoft.AspNetCore.App" Version="$(AspNetCoreAppRuntimeFrameworkVersion)">
+      <IsImplicitlyDefined>true</IsImplicitlyDefined>
+      <PrivateAssets>All</PrivateAssets>
+      <Publish>true</Publish>
+    </PackageReference>
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.1.2" PrivateAssets="All" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.1.0" />
-    <ProjectReference Include="../aaron-favorite-music-data/aaron-favorite-music-data.csproj" />
-    
+    <ProjectReference Include="../aaron-favorite-music-data/aaron-favorite-music-data.csproj" />    
   </ItemGroup>
-
 </Project>
